RESOLVED FIXED305508
REGRESSION(304892@main?): http/tests/resourceLoadStatistics/log-cross-site-load-with-link-decoration.html is a flakey text failure
https://bugs.webkit.org/show_bug.cgi?id=305508
Summary REGRESSION(304892@main?): http/tests/resourceLoadStatistics/log-cross-site-lo...
Diego De La Toba
Reported 2026-01-14 14:32:52 PST
http/tests/resourceLoadStatistics/log-cross-site-load-with-link-decoration.html is a flakey text failure observed on all platforms only running on wk2. HISTORY: https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2FresourceLoadStatistics%2Flog-cross-site-load-with-link-decoration.html TEXT DIFF: --- /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/http/tests/resourceLoadStatistics/log-cross-site-load-with-link-decoration-expected.txt +++ /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/http/tests/resourceLoadStatistics/log-cross-site-load-with-link-decoration-actual.txt @@ -20,7 +20,7 @@ 127.0.0.1 TopFrameLinkDecorationsFrom: 127.0.0.1 - DataRemovalFrequency: Short + DataRemovalFrequency: Never isPrevalentResource: No isVeryPrevalentResource: No dataRecordsRemoved: 0 TEXT DIFF URL: https://build.webkit.org/results/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/305582@main%20(6440)/http/tests/resourceLoadStatistics/log-cross-site-load-with-link-decoration-pretty-diff.html
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-14 14:39:00 PST
Diego De La Toba
Comment 2 2026-01-14 15:41:01 PST
I was able to reproduce this failure at macOS Tahoe ToT running the test as follows: run-webkit-tests http/tests/resourceLoadStatistics/log-cross-site-load-with-link-decoration.html --iterations 1500 I am going to mark expectations for this test as a pass failure while it is under investigation.
Diego De La Toba
Comment 3 2026-01-14 16:10:49 PST
EWS
Comment 4 2026-01-14 16:13:11 PST
Test gardening commit 305617@main (fbf3a8ab04ba): <https://commits.webkit.org/305617@main> Reviewed commits have been landed. Closing PR #56595 and removing active labels.
Radar WebKit Bug Importer
Comment 5 2026-01-14 16:31:55 PST
Robert Jenner
Comment 6 2026-01-14 16:33:48 PST
Robert Jenner
Comment 7 2026-01-14 16:35:23 PST
It looks like the regression point for this might be: https://commits.webkit.org/304892@main. We have a reproduction case where we can reproduce it on 304892@main, but not on 304891@main
Jonathan Bedard
Comment 8 2026-01-15 09:43:52 PST
Chris Dumez
Comment 9 2026-05-05 19:35:22 PDT
EWS
Comment 10 2026-05-11 15:56:18 PDT
Committed 313039@main (f08767a2f3c0): <https://commits.webkit.org/313039@main> Reviewed commits have been landed. Closing PR #64324 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.