REGRESSION(304892@main?): http/tests/resourceLoadStatistics/log-cross-site-load-with-link-decoration.html is a flakey text failure https://bugs.webkit.org/show_bug.cgi?id=305508 rdar://168172161

Reviewed by NOBODY (OOPS!).

304892@main defers old web process shutdown during commitProvisionalPage via a
shutdownPreventingScope. This allows the old process to receive the Close message
and flush its (potentially empty) resource load statistics to the network process.
resourceLoadStatisticsUpdated() unconditionally calls processStatisticsAndDataRecords()
even when there is nothing to merge. This processing iterates all domains and resets
DataRemovalFrequency to Never for any domain that was recently flagged for removal,
racing with logCrossSiteLoadWithLinkDecoration() which just set it to Short.

The fix is to early-return when the statistics vector is empty since there is nothing
to merge and no reason to trigger data records processing.

No new tests, unskip existing test.

* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/NetworkProcess/Classifier/WebResourceLoadStatisticsStore.cpp:
(WebKit::WebResourceLoadStatisticsStore::resourceLoadStatisticsUpdated):